--- a/css/layoutit.css
+++ b/css/layoutit.css
@@ -260,3 +260,10 @@ a.language-selected { font-style: italic; font-weight: bold; }
 }
 
 .w100 {width:100px!important;}
+
+.bluebtn {padding:4px 12px;margin-bottom:0;font-size:14px;line-height:20px;
+text-align:center;vertical-align:middle;cursor:pointer;
+-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;*margin-left:.3em;
+color:#fff;background-color:#177bbb;border: 1px solid #177bbb;}
+
+.bluebtn:active {color:#fff;background:#2288aa;border: 1px solid #2288aa;}
